# XAI-im-Controlling

./: .gitignore  README.md  docker-compose.yml  nginx.conf
.github/workflows/: main.yml
Backend/: API.py  Dockerfile  README.md  cf_1097.csv  cf_470.csv  cf_470.json  cf_470_unadj.csv  counterfactual_explanations.json  main.py  pyproject.toml  shap_cf  shap_cf.py  shap_feature_importance.json  store_descriptions.json  time_series_1097.json  time_series_470.json  user_input.json
Backend1/: API.py  main.py  shap_feature_importance.json
CouchDB/: Dockerfile
Frontend/: 1097.csv  Dockerfile  Dockerfile.txt  cf_1097.json  cf_470.json  completion.html  control.html  dashboard.css  dashboard.html  dashboard.js  dashboard1.html  dashboard1.js  fiktiv.csv  index.html  index.js  index2.html  landingpage.html  main.html  setting.html  setting.js  setting2.html  setting3.html  shap_feature_importance.json  survey.html
Frontend/js/: setting.js
FrontendProject/: package-lock.json  package.json
FrontendProject/src/: dashboard.css  fiktiv.csv  index.html  index_gpt.html
_test_database/: README.md  getting_data.py  pyproject.toml  testing_couchdb.py
nginx/: nginx.conf
testing_xai_methods/: rossmann_forecaster.py
