[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["lars.moestue@uni-ulm.de"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
xgboost = "^2.0.3"
shap = "^0.45.1"
dice = "^4.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
uuid = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
