[tool.poetry]
name = "-test-database"
version = "0.1.0"
description = ""
authors = ["larsmoe <lars.moestue@uni-ulm.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
couchdb = "^1.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
